--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 
                     <select id="game-select">
                         <option value="">Selecione um jogo</option>
-                        <option value="minecraft">Minecraft</option>
-                        <option value="valorant">Valorant</option>
-                        <option value="lol">League Of Legends</option>
-                        <option value="csgo">CS:GO</option>
+                        <option value="Minecraft">Minecraft</option>
+                        <option value="Valorant">Valorant</option>
+                        <option value="League Of Legends">League Of Legends</option>
+                        <option value="CS:GO">CS:GO</option>
+                        <option value="Fortnite">Fortnite</option>
+                        <option value="Genshin Impact">Genshin Impact</option>
                     </select>
 
                     <input id="question" type="text" placeholder="Ex: Melhor build para ADC..." required>
@@ -45,6 +47,7 @@
         </section>
     </main>
 
+    <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
