Finalizando os estilos e o prompt da ia focado no lol

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <button id="ask-button">Perguntar</button>
                 </form>
 
-                <div id="ai-response">
+                <div id="ai-response" class="hidden">
                     <div class="response-content"></div>
                 </div>
             </div>
