--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
                     <select id="game-select">
                         <option value="">Selecione um jogo</option>
+                        <option value="League Of Legends">League Of Legends</option>
                         <option value="Minecraft">Minecraft</option>
                         <option value="Valorant">Valorant</option>
-                        <option value="League Of Legends">League Of Legends</option>
-                        <option value="CS:GO">CS:GO</option>
+                        <option value="CS:GO e CS2">CS:GO e CS2</option>
                         <option value="Fortnite">Fortnite</option>
                         <option value="Genshin Impact">Genshin Impact</option>
                     </select>
